--- a/src/App.css
+++ b/src/App.css
@@ -99,3 +99,30 @@
   margin-right: 1em;
   margin-left: 1em;
 }
+
+#get-data {
+  /* Add some margin to the button */
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 2em;
+  margin-right: 2em;
+  /* Add some padding to the button */
+  padding: 0.6em 1.2em;
+  /* Edit the border of the button */ 
+  border-radius: 8px; /* Rounded corners */
+  border: 1px solid transparent; /* Define a border of 1 pixel of width, solid and transparent */
+  /* Edot the font of the button */
+  font-size: 1em; 
+  font-weight: 500;
+  font-family: inherit;
+  /* Edit the background color of the button */
+  background-color: #1a1a1a;
+  /* Edit the cursor of the button */
+  cursor: pointer;
+  /* Add a transition effect to the button */
+  transition: background-color 0.05s;
+}
+
+#get-data:hover {
+  background-color: rgb(94, 92, 92);
+}
